--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,15 +8,40 @@ body {
   .pesquisa {
     margin-bottom: 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    position: relative;
   }
-  
+
   .pesquisa input[type="text"] {
-    flex: 1;
-    margin-right: 10px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
   }
-  
+
+  ul#nomesSugestoes {
+    list-style-type: none;
+    padding: 0;
+    margin: 5px 0 0;
+    max-height: 150px; /* Limite de altura */
+    overflow-y: auto; /* Scroll caso a lista ultrapasse o limite */
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+  }
+
+  ul#nomesSugestoes li {
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  ul#nomesSugestoes li:hover {
+    background-color: #f0f0f0;
+  }
+
   .container {
     max-width: 600px;
     margin: 0 auto;
@@ -25,21 +50,21 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-  
+
   h1 {
     text-align: center;
     color: #333;
   }
-  
+
   .form-group {
     margin-bottom: 15px;
   }
-  
+
   label {
     display: block;
     margin-bottom: 5px;
   }
-  
+
   input[type="text"],
   input[type="number"],
   select {
@@ -48,12 +73,12 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
   }
-  
+
   .button-group {
     display: flex;
     justify-content: space-between;
   }
-  
+
   button {
     padding: 10px 15px;
     border: none;
@@ -62,11 +87,11 @@ body {
     color: white;
     cursor: pointer;
   }
-  
+
   button:hover {
     background-color: #0056b3;
   }
-  
+
   .resultado {
     margin-top: 20px;
     padding: 10px;
