--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,46 +13,46 @@
         <h1>Cadastro de Pessoa</h1>
 
         <div class="pesquisa">
-          <label for="pesquisarNome">Pesquisar por Nome:</label>
-          <input type="text" id="pesquisarNome" name="pesquisarNome" (input)="onInputChange($event)" placeholder="Digite o nome">
-          <button type="button" class="btn-continuar" (click)="pesquisar()">Continuar</button>
-          <ul id="nomesSugestoes" [class.visible]="filteredNomes.length > 0">
-            <li *ngFor="let nome of filteredNomes" (click)="selecionarNome(nome)">
-              {{ nome }}
-            </li>
-          </ul>
+            <label for="pesquisarNome">Pesquisar por Nome:</label>
+            <input type="text" id="pesquisarNome" name="pesquisarNome" (input)="onInputChange($event)" placeholder="Digite o nome">
+            <button type="button" class="btn-continuar" (click)="pesquisar(nome)">Continuar</button>
+            <ul id="nomesSugestoes" [class.visible]="filteredNomes.length > 0">
+                <li *ngFor="let nome of filteredNomes" (click)="selecionarNome(nome)">
+                    {{ nome }}
+                </li>
+            </ul>
         </div>
 
-        <form id="pessoaForm">
+        <form id="pessoaForm" #pessoaForm="ngForm">
             <div class="form-group">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+                <input type="text" id="nome" name="nome" required [(ngModel)]="nome">
             </div>
 
             <div class="form-group">
                 <label for="dataNasc">Data de Nascimento:</label>
-                <input type="date" id="dataNasc" name="data_nasc" required>
+                <input type="date" id="dataNasc" name="data_nasc" required [(ngModel)]="dataNasc">
             </div>
 
             <div class="form-group">
                 <label for="cpf">CPF:</label>
-                <input type="text" id="cpf" name="cpf" required>
+                <input type="text" id="cpf" name="cpf" required [(ngModel)]="cpf">
             </div>
 
             <div class="form-group">
                 <label for="altura">Altura (em metros):</label>
-                <input type="number" id="altura" name="altura" step="0.01" required>
+                <input type="number" id="altura" name="altura" step="0.01" required [(ngModel)]="altura">
             </div>
 
             <div class="form-group">
                 <label for="peso">Peso (em kg):</label>
-                <input type="number" id="peso" name="peso" step="0.01" required>
+                <input type="number" id="peso" name="peso" step="0.01" required [(ngModel)]="peso">
             </div>
 
             <div class="form-group">
                 <label for="sexo">Sexo:</label>
-                <select id="sexo" name="sexo" required>
-                    <option value=""> </option>
+                <select id="sexo" name="sexo" required [(ngModel)]="sexo">
+                    <option value="" disabled selected>Selecione</option>
                     <option value="M">Masculino</option>
                     <option value="F">Feminino</option>
                 </select>
@@ -62,9 +62,9 @@
 
             <div class="button-group">
                 <button type="button" (click)="incluir()">Incluir</button>
-                <button type="button" id="btnAlterar" onclick="alterar()" disabled>Alterar</button>
-                <button type="button" id="btnExcluir" onclick="excluir()" disabled>Excluir</button>
-                <button type="button" onclick="calcularPesoIdeal()">Calcular Peso Ideal</button>
+                <button type="button" id="btnAlterar" (click)="alterar()" disabled>Alterar</button>
+                <button type="button" id="btnExcluir" (click)="excluir()" disabled>Excluir</button>
+                <button type="button" (click)="calcularPesoIdeal()">Calcular Peso Ideal</button>
             </div>
 
             <div id="erro" class="erro" style="color: red;"></div>
@@ -74,7 +74,7 @@
 
         <div id="pesoIdealResultado" class="peso-ideal" style="display: none;">
             <p id="resultadoPesoIdeal"></p>
-            <button onclick="fecharPesoIdeal()">OK</button>
+            <button (click)="fecharPesoIdeal()">OK</button>
         </div>
     </div>
 
