--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -23,14 +23,14 @@ body {
 ul#nomesSugestoes {
   list-style-type: none;
   padding: 0;
-  margin: 75px 100px 0; /* Ajuste a distância acima da lista de sugestões */
-  max-height: 150px; /* Altura máxima da lista */
-  overflow-y: auto; /* Rolagem se necessário */
+  margin: 0;
+  max-height: 150px;
+  overflow-y: auto;
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #fff;
-  position: absolute; /* Para posicionar abaixo do campo de pesquisa */
-  width: calc(100% - 200px); /* Ajuste a largura conforme necessário */
+  position: absolute;
+  width: 100%;
   z-index: 10;
   display: none; /* Inicialmente oculto */
 }
@@ -98,9 +98,66 @@ button:hover {
   background-color: #0056b3;
 }
 
+button.disabled {
+  background-color: #ccc; /* Cor cinza para botões desativados */
+  cursor: not-allowed; /* Altera o cursor para indicar que o botão está desativado */
+}
+
 .resultado {
   margin-top: 20px;
   padding: 10px;
   background-color: #e9ecef;
   border-radius: 4px;
+}
+
+
+/* Estilo do Modal */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro semi-transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 300px;
+}
+
+.modal-content h3 {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-buttons button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.modal-buttons button:first-child {
+  background-color: #007bff;
+  color: white;
+}
+
+.modal-buttons button:last-child {
+  background-color: #ccc;
+  color: black;
 }
